# iVox3dPythonWrapper

./: .gitignore  CMakeLists.txt  README.md  demo.py
cmake/: FindLTO.cmake  FindSystem.cmake  PICMake.cmake
src/: Glog.h  Svar.h  _main.cpp  ivox3d.h  ivox3d_node.hpp
